snapshots/syntax/library/statements/get/get_at_module_level.snap
---
source: src/syntax/library/statements/get.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: GetStatement
      children:
        - kind: GetKeyword
          text: Get
        - kind: Whitespace
          text: " "
        - kind: Octothorpe
          text: "#"
        - kind: IntegerLiteral
          text: "1"
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: myData
        - kind: Newline
          text: "\n"
